[package]
name = "celery-beat-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum_macros = "0.26.4"
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
strum = "0.26"
base64 = "0.22.1"
env_logger = "0.11.3"
futures = "0.3"
log = "0.4.14"
dotenvy = "0.15.7"
rand = "0.8.5"
chrono = "0.4.19"
bson = "2.0.0"
cron-parser = "0.9.0"

[dependencies.uuid]
version = "1.9.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.redis]
version = "0.25.4"
features = ["tokio-comp", "serde_json", "aio"]

[dependencies.mongodb]
version = "3.0.1"
features = ["sync"]
