[tool.poetry]
name = "celery-beat-rs"
version = "0.1.0"
description = ""
authors = ["Mamun <mdmmn378@gmail.com>"]
readme = "README.md"
packages = [{ include = "src-py", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
celery-types = "^0.22.0"
celery = {extras = ["redis"], version = "^5.4.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
